Countdown and prediction panels

--- a/app/index.html
+++ b/app/index.html
@@ -53,19 +53,51 @@
  
     <div class="panel station text-general"> 
 
-      <div class="station-top">
+      <div class="panel-elem station-top">
         King's Cross St. Pancras
       </div> 
  
-      <div class="station-middle">
+      <div class="panel-elem station-middle">
         Circle, H'smith &amp; City, Metropolitan lines 
       </div>
 
-      <div class="station-bottom">
+      <div class="panel-elem station-bottom">
         <img src="/images/train-icon.png" /> 
         Thameslink
       </div> 
 
+    </div>
+
+    <div class="panel countdown">
+      <div class="panel-elem countdown-main text-general">
+        Next train: 04m 33s
+      </div>
+
+      <div class="panel-elem countdown-secondary text-general">
+        <div class="panel-elem countdown-secondary-message text-general">
+          Train on platform!
+        </div>
+
+        <div class="panel-elem countdown-secondary-trainafter text-general">
+          Train after: 10m 00s+
+        </div>
+      </div>
+    </div>
+
+    <div class="panel prediction">
+      <div class="panel-elem prediction-main text-general">
+        Good service
+      </div>
+      
+      <div class="panel-elem prediction-secondary text-general">
+        <div class="panel-elem prediction-secondary-us text-general">
+          Our prediction: good service
+        </div>
+
+        <div class="panel-elem prediction-secondary-tfl text-general">
+          TfL status: good service
+        </div>
+      </div>
     </div>
   </body>
 </html>
