Tube service status icons

--- a/app/index.html
+++ b/app/index.html
@@ -86,7 +86,7 @@
 
     <div class="panel prediction">
       <div class="panel-elem prediction-main text-general">
-        Good service
+        <img src="/images/SUSPENDED.svg" />
       </div>
       
       <div class="panel-elem prediction-secondary text-general">
