Use vmin instead of em as size

--- a/app/index.html
+++ b/app/index.html
@@ -51,17 +51,17 @@
 
     </div>    
  
-    <div class="panel station text-general"> 
+    <div class="panel station"> 
 
-      <div class="panel-elem station-top">
+      <div class="panel-elem station-top text-general">
         King's Cross St. Pancras
       </div> 
  
-      <div class="panel-elem station-middle">
+      <div class="panel-elem station-middle text-general">
         Circle, H'smith &amp; City, Metropolitan lines 
       </div>
 
-      <div class="panel-elem station-bottom">
+      <div class="panel-elem station-bottom text-general">
         <img src="/images/train-icon.png" /> 
         Thameslink
       </div> 
